# rust_on_android

./: README.md  run.cmd  run.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rust/template/: ExampleInstrumentedTest.java
app/src/main/java/com/krupitskas/pong/: MainActivity.java  RustBindings.java
app/src/main/java/com/rust/template/: Main.java  MainActivity.java  NativeLoader.java  RustBindings.java
app/src/main/res/values/: strings.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: greetings.h  lib.rs  main.rs  pc_main.rs
app/src/test/java/com/rust/template/: ExampleUnitTest.java
