[package]
name = "template"
version = "0.0.1"
authors = ["Nikita rust <krupitskaz@gmail.com>"]
edition = "2018"

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
jni = "0.19.0"

[lib]
path = "src/lib.rs"
name = "template_lib"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "template_pc"
path = "src/pc_main.rs"
